second solution. Changed constructor and User field modifiers